File generation names
Uer asset names require end to end user identity.

--- a/blog/config_data_server.conf
+++ b/blog/config_data_server.conf
@@ -1,5 +1,5 @@
 {
-    "port" : 5112,
+    "port" : 3000,
     "address" : "localhost",
     "records_dir" : "./test-data",
     "file_shunting" : false,
@@ -15,6 +15,6 @@
     "shrinkage" : 2.3,
     "search_backup_file" : "logs/user-server.db",
     "updating_records_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/persistence/updates",
-    "assets_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/persistence/blog"
+    "assets_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/persistence/blog",
     "subscribe" : "publish-blog"
 }
