--- a/contacts/config_data_server.conf
+++ b/contacts/config_data_server.conf
@@ -23,6 +23,7 @@
     },
     "shrinkage" : 2.3,
     "search_backup_file" : "logs/user-server.db",
-    "updating_records_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/users",
-    "assets_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/user-assets"
+    "updating_records_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/persistence/updates",
+    "assets_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/persistence/contacts"
+    "subscribe" : "publish-contact"
 }
