--- a/demos/config_data_server.conf
+++ b/demos/config_data_server.conf
@@ -1,5 +1,5 @@
 {
-    "port" : 5112,
+    "port" : 3010,
     "address" : "localhost",
     "records_dir" : "./test-data",
     "file_shunting" : false,
@@ -14,6 +14,7 @@
     },
     "shrinkage" : 2.3,
     "search_backup_file" : "logs/user-server.db",
-    "updating_records_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/users",
-    "assets_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/user-assets"
+    "updating_records_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/persistence/updates",
+    "assets_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/persistence/demos",
+    "subscribe" : "publish-demo"
 }
