Made a record generator that may be supplied at the application level
Usage in dashboard and profile.

--- a/services/relay-service.conf
+++ b/services/relay-service.conf
@@ -49,7 +49,8 @@
         "address" : "localhost",
         "user_directory" : "./user-assets",
         "asset_template_dir" : "./user_templates",
-        "all_users" : "users"
+        "all_users" : "users",
+        "record_generator" : ["transitions/dashboard","transitions/profile"]
     },
     "persistence_endpoint" : {
         "port" : 5116,
