In debugging dashboards, handle field name inconsitencies.

--- a/services/relay-service.conf
+++ b/services/relay-service.conf
@@ -27,8 +27,11 @@
                 "output_file" : "/user_data.json",
                 "port" : 5114,
                 "address" : "localhost",
-                "max_unanswered_messages" : false,
-                "file_shunting" : true
+                "max_pending_messages" : false,
+                "file_shunting" : false,
+                "max_reconnect" : 24,
+                "reconnect_wait" : 5,
+                "attempt_reconnect" : true
             }
         },
         "persistence" : {
@@ -38,8 +41,11 @@
                 "output_file" : "/user_data.json",
                 "port" : 5116,
                 "address" : "localhost",
-                "max_unanswered_messages" : false,
-                "file_shunting" : true
+                "max_pending_messages" : false,
+                "file_shunting" : false,
+                "max_reconnect" : 24,
+                "reconnect_wait" : 5,
+                "attempt_reconnect" : true
             },
             "types" : [ "assets", "blog", "demo", "ownership", "stream" ]
         }
