Add a service that subscribes to dashboad commands and forwards acceptable items
Items are forwarded to the appropriate persistence endpoint.

--- a/users/config_data_server.conf
+++ b/users/config_data_server.conf
@@ -24,5 +24,21 @@
     "shrinkage" : 2.3,
     "search_backup_file" : "logs/user-server.db",
     "updating_records_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/users",
-    "assets_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/user-assets"
+    "assets_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/user-assets",
+    "publisher" : {
+        "topics" : {
+            "command-publish" : {
+                "_tx_op" : "P"
+            },
+            "command-recind" :  {
+                "_tx_op" : "U"
+            },
+            "command-delete" :   {
+                "_tx_op" : "D"
+            },
+            "command-send" : {
+                "no_endpoint" : true
+            }
+        }
+    }
 }
