--- a/blog/sites/copious/config_data_server.conf
+++ b/blog/sites/copious/config_data_server.conf
@@ -1,20 +1,20 @@
 {
-    "port" : 3012,
+    "port" : 3002,
     "address" : "localhost",
-    "records_dir" : "../../../data/streams",
+    "records_dir" : "../../../data/music_buzz",
     "file_shunting" : false,
     "persistence" : {
         "port" : 5116,
         "address" : "localhost",
         "files_only" : false,
         "output_dir" : "logs/fail_over_clients",
-        "output_file" : "/media_data.json",
+        "output_file" : "/songcrowd_data.json",
         "max_unanswered_messages" : false,
         "file_shunting" : true
     },
     "subscribe" : "publish-blog",
     "shrinkage" : 2.3,
-    "search_backup_file" : "logs/media-server.db",
-    "updating_records_directory" : "../../../data/streams",
-    "assets_directory" : "../../../data/streams"
+    "search_backup_file" : "logs/song-user-server.db",
+    "updating_records_directory" : "../../../data/music_buzz",
+    "assets_directory" : "../../../data/music_buzz"
 }
