--- a/demos/config_data_server.conf
+++ b/demos/config_data_server.conf
@@ -1,20 +1,20 @@
 {
     "port" : 3010,
     "address" : "localhost",
-    "records_dir" : "./test-data",
+    "records_dir" : "../../../data/demos",
     "file_shunting" : false,
     "persistence" : {
         "port" : 5116,
         "address" : "localhost",
         "files_only" : false,
         "output_dir" : "logs/fail_over_clients",
-        "output_file" : "/persistence_data.json",
+        "output_file" : "/demo_data.json",
         "max_unanswered_messages" : false,
         "file_shunting" : true
     },
+    "subscribe" : "publish-demo",
     "shrinkage" : 2.3,
-    "search_backup_file" : "logs/user-server.db",
-    "updating_records_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/persistence/updates",
-    "assets_directory" : "/Users/richardalbertleddy/Documents/GitHub/svelte-blogs/services/persistence/demos",
-    "subscribe" : "publish-demo"
+    "search_backup_file" : "logs/demo-server.db",
+    "updating_records_directory" : "../../../data/demos",
+    "assets_directory" : "../../../data/demos"
 }
