user _tracking field and improvements to users services
requiring less specificity about certain user assets, dashboard, profile, etc.

--- a/users/config_data_server.conf
+++ b/users/config_data_server.conf
@@ -10,7 +10,10 @@
         "output_dir" : "logs/fail_over_clients",
         "output_file" : "/user_data.json",
         "max_unanswered_messages" : false,
-        "file_shunting" : true
+        "file_shunting" : true,
+        "max_reconnect" : 24,
+        "reconnect_wait" : 5,
+        "attempt_reconnect" : true
     },
     "persistence" : {
         "port" : 5116,
@@ -19,7 +22,10 @@
         "output_dir" : "logs/fail_over_clients",
         "output_file" : "/persistence_data.json",
         "max_unanswered_messages" : false,
-        "file_shunting" : true
+        "file_shunting" : true,
+        "max_reconnect" : 24,
+        "reconnect_wait" : 5,
+        "attempt_reconnect" : true
     },
     "shrinkage" : 2.3,
     "search_backup_file" : "logs/user-server.db",
