Finish refactoring the server withing streams
Create a submodule for the searching functions, generic file watching, etc

Creating test directories....

All changes currently in streams
After verifying streams, next propapagate changes to other data type directories.

--- a/services/relay-service.conf
+++ b/services/relay-service.conf
@@ -63,12 +63,18 @@
         "address" : "localhost",
         "user_directory" : "./user-assets",
         "directories" : {
+            
             "blog" :  "./persistence/blog",
             "stream" :  "./persistence/stream",
             "demo" :  "./persistence/demo",
+            "links" :  "./persistence/links",
+            
+            "contacts" : "./persistence/links",
+            "ownership" : "./persistence/ownership",
+            "wallet" : "./persistence/wallet",
             "assets" :  "./persistence/assets",
-            "ownership" :  "./persistence/ownership",
-            "notification" : "./persistence/notify"           
+            
+            "notification" : "./persistence/notify"
         },
         "create_OK" : true
     }
