--- a/streams/config_data_server.conf
+++ b/streams/config_data_server.conf
@@ -1,7 +1,7 @@
 {
     "port" : 3012,
     "address" : "localhost",
-    "records_dir" : "../../../data/streams",
+    "records_dir" : "./data/streams",
     "file_shunting" : false,
     "persistence" : {
         "port" : 5116,
@@ -15,6 +15,6 @@
     "subscribe" : "publish-blog",
     "shrinkage" : 2.3,
     "search_backup_file" : "logs/media-server.db",
-    "updating_records_directory" : "../../../data/streams",
-    "assets_directory" : "../../../data/streams"
+    "updating_records_directory" : "./data/streams",
+    "assets_directory" : "./data/streams"
 }
