--- a/streams/package.json
+++ b/streams/package.json
@@ -18,8 +18,9 @@
     "svelte-grid": "^3.6.0"
   },
   "dependencies": {
+    "copious-little-searcher": "https://github.com/copious-world/copious-little-searcher.git",
     "express": "^4.17.1",
-    "fastify": "^3.9.2",
+    "fastify": "^3.14.2",
     "fastify-cors": "^5.1.0",
     "forever-monitor": "^3.0.3",
     "middie": "^5.2.0",
