--- a/demos/package.json
+++ b/demos/package.json
@@ -15,6 +15,7 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
+    "svelte-float-window": "^1.0.0",
     "svelte-grid": "^3.6.0"
   },
   "dependencies": {
