--- a/streams/package.json
+++ b/streams/package.json
@@ -23,6 +23,7 @@
     "fastify-cors": "^5.1.0",
     "forever-monitor": "^3.0.3",
     "middie": "^5.2.0",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-float-window": "^1.0.0"
   }
 }
