--- a/blog/package.json
+++ b/blog/package.json
@@ -15,6 +15,7 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
+    "grid-of-things": "^1.0.0",
     "svelte-float-window": "^1.0.0",
     "svelte-grid": "^3.6.0"
   },
@@ -24,7 +25,6 @@
     "fastify-cors": "^5.1.0",
     "forever-monitor": "^3.0.3",
     "middie": "^5.2.0",
-    "shm-typed-array": "0.0.12",
     "sirv-cli": "^1.0.0"
   }
 }
