--- a/calendars/package.json
+++ b/calendars/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-app",
+  "name": "svelte-blog-calendar",
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
@@ -9,15 +9,16 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
+    "grid-of-things": "^1.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
-    "grid-of-things": "^1.0.0",
     "svelte-float-window": "^1.0.0",
-    "svelte-grid": "^3.6.0"
+    "svelte-grid": "^3.6.0",
+    "event-days": "^0.1.3"
   },
   "dependencies": {
     "express": "^4.17.1",
