--- a/calendar-owner/package.json
+++ b/calendar-owner/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
+    "event-days": "^0.1.6",
     "grid-of-things": "^1.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
@@ -17,15 +18,15 @@
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-float-window": "^1.0.0",
-    "svelte-grid": "^3.6.0",
-    "event-days": "^0.1.6"
+    "svelte-grid": "^3.6.0"
   },
   "dependencies": {
     "express": "^4.17.1",
     "fastify": "^3.9.2",
     "fastify-cors": "^5.1.0",
-    "forever-monitor": "^3.0.3",
+    "forever-monitor": "^1.5.2",
     "middie": "^5.2.0",
+    "panzoom": "^9.4.3",
     "sirv-cli": "^1.0.0"
   }
 }
