--- a/calendars/package.json
+++ b/calendars/package.json
@@ -7,25 +7,26 @@
     "start": "sirv public"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^16.0.0",
-    "@rollup/plugin-node-resolve": "^10.0.0",
-    "grid-of-things": "^1.0.0",
-    "rollup": "^2.3.4",
+    "@rollup/plugin-commonjs": "^23.0.0",
+    "@rollup/plugin-node-resolve": "^14.1.0",
+    "event-days": "^0.1.7",
+    "grid-of-things": "^1.0.2",
+    "rollup": "^2.79.1",
     "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "svelte-float-window": "^1.0.0",
-    "svelte-grid": "^3.6.0",
-    "event-days": "^0.1.6"
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.50.1",
+    "svelte-float-window": "^1.0.1",
+    "svelte-grid": "^5.1.1"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "fastify": "^3.9.2",
-    "fastify-cors": "^5.1.0",
+    "express": "^4.18.2",
+    "fastify": "^4.7.0",
+    "fastify-cors": "^6.1.0",
     "forever-monitor": "^3.0.3",
-    "middie": "^5.2.0",
-    "sirv-cli": "^1.0.0"
+    "middie": "^7.1.0",
+    "month-utils": "^0.8.1",
+    "sirv-cli": "^2.0.2"
   }
 }
