--- a/calendar-owner/package.json
+++ b/calendar-owner/package.json
@@ -29,6 +29,7 @@
     "forever-monitor": "^1.5.2",
     "middie": "^5.2.0",
     "panzoom": "^9.4.3",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-clock": "^1.0.0"
   }
 }
